Add Alien2: a basic version of the alien without the speed up bug. Essentially an asteroid with alien skin

--- a/VC/Asteroids/Asteroids.vcxproj
+++ b/VC/Asteroids/Asteroids.vcxproj
@@ -103,6 +103,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\SRC\Alien.cpp" />
+    <ClCompile Include="..\..\SRC\Alien2.cpp" />
     <ClCompile Include="..\..\SRC\Asteroid.cpp" />
     <ClCompile Include="..\..\src\Asteroids.cpp" />
     <ClCompile Include="..\..\src\Bullet.cpp" />
@@ -112,6 +113,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\SRC\Alien.h" />
+    <ClInclude Include="..\..\SRC\Alien2.h" />
     <ClInclude Include="..\..\SRC\Asteroid.h" />
     <ClInclude Include="..\..\src\Asteroids.h" />
     <ClInclude Include="..\..\src\Bullet.h" />
